--- a/package.json
+++ b/package.json
@@ -2,10 +2,63 @@
   "name": "lit-blogpost-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "test"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development  --open",
+    "build": "webpack --mode production",
+    "lint": "node_modules/.bin/eslint .",
+    "lint:fix": "prettier-eslint --write '**/*.js'"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NkFab/lit-blogpost-react.git"
+  },
+  "author": "Manzi",
+  "license": "ISC",
+  "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "file-loader": "^3.0.1",
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-material-ui-form-validator": "^2.0.8",
+    "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
+    "react-swipeable-views": "^0.13.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "typeface-roboto": "^0.0.54",
+    "url-loader": "^1.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-lodash": "^3.3.4",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "prettier-eslint-cli": "^4.7.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "bugs": {
+    "url": "https://github.com/NkFab/lit-blogpost-react/issues"
+  },
+  "homepage": "https://github.com/NkFab/lit-blogpost-react#readme"
 }
